nginx-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: live
  labels:
    project: nginx
    name: live
