nginx-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: live-nginx-service
  namespace: live
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    project: nginx
    environment: live
